# Warlocked-Engine

./: .gitignore  CMakeLists.txt  README.md  plan.txt
src/: controller.cpp  entity.cpp  game_main.cpp  gamearea.cpp  gameloop.cpp  gameworld.cpp  player.cpp  projectile.cpp  template.cpp  textureloader.cpp  tilemaptools.cpp
src/headers/: controller.hpp  entity.hpp  gamearea.hpp  gameloop.hpp  gameworld.hpp  player.hpp  projectile.hpp  textureloader.hpp  tilemaptools.hpp
